syntax = "proto3";

package items;

message Page {
    string link_1 = 1;
    string link_2 = 2;
    string link_3 = 3;
    string link_4 = 4;
    string link_5 = 5;
    string link_6 = 6;
    string link_7 = 7;
    string link_8 = 8;
    string link_9 = 9;
    string link_10 = 10;
}

message Links {
    map<string, Page> links = 1;
}